--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: target.mind;" 
+        mindar-image="imageTargetSrc: targets.mind;" 
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
