--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>MindAR Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- MindAR y A-Frame -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
@@ -18,8 +18,14 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: targets.mind;" 
-        color-space="sRGB"
+        mindar-image="
+          imageTargetSrc: targets.mind;
+          filterMinCF: 0.05;
+          filterBeta: 5;
+          warmupTolerance: 2;
+          missTolerance: 2;
+        " 
+        color-space="CMYK"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
         vr-mode-ui="enabled: false"
