--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           imageTargetSrc: targets.mind;
           filterMinCF: 0.05;
           filterBeta: 5;
-          warmupTolerance: 2;
-          missTolerance: 2;
+          warmupTolerance: 1;
+          missTolerance: 1;
         " 
         color-space="CMYK"
         embedded
@@ -32,7 +32,7 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <a-asset-item id="boxModel" src="box.glb"></a-asset-item>
+          <a-asset-item id="boxModel" src="Eevee gif.gif"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
