--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <a-asset-item id="boxModel" src="Eevee gif.gif"></a-asset-item>
+          <a-asset-item id="boxModel" src="EE.glb"></a-asset-item>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
