--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <a-assets>
           <video 
             id="EEVideo" 
-            src="EE.webp" 
-            autoplay 
+            src="video/EE.webm" 
             loop 
             muted 
             playsinline
@@ -45,18 +44,31 @@
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0">
-          <!-- Video animado -->
+        <a-entity mindar-image-target="targetIndex: 0" id="target">
           <a-video
-            src="EE.webp"
+            src="#EEVideo"
             width="1"
             height="1.3"
             position="0 0 0"
             rotation="0 0 0"
-            transparent="true"
           ></a-video>
         </a-entity>
       </a-scene>
     </div>
+
+    <!-- Script para forzar reproducción -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const sceneEl = document.querySelector("a-scene");
+        const video = document.querySelector("#EEVideo");
+        const target = document.querySelector("#target");
+
+        target.addEventListener("targetFound", () => {
+          if (video.paused) {
+            video.play();
+          }
+        });
+      });
+    </script>
   </body>
 </html>
