--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Animación</title>
+    <title>MindAR Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- MindAR y A-Frame -->
@@ -31,44 +31,23 @@
         vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: true"
       >
+        <!-- Cargar el GIF animado -->
         <a-assets>
-          <video 
-            id="EEVideo" 
-            src="video/EE.webm" 
-            loop 
-            muted 
-            playsinline
-            crossorigin="anonymous"
-          ></video>
+          <img id="ee-gif" src="EE.gif" />
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0" id="target">
-          <a-video
-            src="#EEVideo"
+        <!-- Mostrar el GIF animado sobre el target -->
+        <a-entity mindar-image-target="targetIndex: 0">
+          <a-image 
+            src="EE.gif"
+            position="0 0 0"
             width="1"
             height="1.3"
-            position="0 0 0"
-            rotation="0 0 0"
-          ></a-video>
+          ></a-image>
         </a-entity>
       </a-scene>
     </div>
-
-    <!-- Script para forzar reproducción -->
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const sceneEl = document.querySelector("a-scene");
-        const video = document.querySelector("#EEVideo");
-        const target = document.querySelector("#target");
-
-        target.addEventListener("targetFound", () => {
-          if (video.paused) {
-            video.play();
-          }
-        });
-      });
-    </script>
   </body>
 </html>
