--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: true"
       >
-        <!-- Cargar el GIF animado -->
+        <!-- Cargar el GIF animado como textura -->
         <a-assets>
-          <img id="ee-gif" src="EE.gif" />
+          <img id="#EE-gif" src="EE.gif" crossorigin="anonymous" />
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <!-- Mostrar el GIF animado sobre el target -->
+        <!-- Mostrar la imagen (solo animada si el navegador lo soporta) -->
         <a-entity mindar-image-target="targetIndex: 0">
           <a-image 
-            src="EE.gif"
+            src="#EE.gif"
             position="0 0 0"
             width="1"
             height="1.3"
