--- a/index.html
+++ b/index.html
@@ -44,16 +44,17 @@
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0">
-          <a-image
-            id="anim-image"
-            src="#frame0"
-            position="0 10 0"
-            width="1"
-            height="1.3"
-            transparent="true"
-          ></a-image>
-        </a-entity>
+        <a-entity mindar-image-target="targetIndex: 0" position="0 0.2 0">
+        <a-image
+          id="anim-image"
+         src="#frame0"
+         position="0 0 0"
+         width="1"
+        height="1.3"
+         transparent="true"
+      ></a-image>
+</a-entity>
+
       </a-scene>
     </div>
 
