--- a/index.html
+++ b/index.html
@@ -1,95 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>MindAR Secuencia PNG Animada</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Llaveros - Selección</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body { 
+      margin: 0; 
+      font-family: sans-serif; 
+      background: #fafafa; 
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      align-items: center;
+      justify-content: center;
+    }
+    #tabs {
+      background: rgba(255,255,255,0.95);
+      border-radius: 8px;
+      padding: 20px 40px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      user-select: none;
+      display: flex;
+      gap: 12px;
+    }
+    #tabs button {
+      cursor: pointer;
+      padding: 10px 20px;
+      border: 1px solid #333;
+      background: white;
+      border-radius: 4px;
+      font-weight: bold;
+      font-size: 18px;
+      transition: background 0.3s, color 0.3s, border-color 0.3s;
+    }
+    #tabs button.active {
+      background: #4CAF50;
+      color: white;
+      border-color: #4CAF50;
+    }
+  </style>
+</head>
+<body>
 
-    <!-- MindAR y A-Frame -->
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
+  <div id="tabs">
+    <button data-character="eevee" class="active">Llaveros Eevee</button>
+  </div>
 
-    <style>
-      body { margin: 0; overflow: hidden; }
-      #ar-container { width: 100vw; height: 100vh; }
-    </style>
-  </head>
-  <body>
-    <div id="ar-container">
-      <a-scene 
-        mindar-image="
-          imageTargetSrc: targets.mind;
-          filterMinCF: 0.05;
-          filterBeta: 5;
-          warmupTolerance: 1;
-          missTolerance: 1;
-        " 
-        color-space="sRGB"
-        embedded
-        renderer="colorManagement: true, physicallyCorrectLights"
-        vr-mode-ui="enabled: false"
-        device-orientation-permission-ui="enabled: true"
-      >
-        <a-assets>
-          <!-- Cargamos las imágenes PNG de la secuencia -->
-          <img id="frame0" src="Eevee/Eevee-1.png" crossorigin="anonymous" />
-          <img id="frame1" src="Eevee/Eevee-2.png" crossorigin="anonymous" />
-          <img id="frame2" src="Eevee/Eevee-3.png" crossorigin="anonymous" />
-          <img id="frame3" src="Eevee/Eevee-4.png" crossorigin="anonymous" />
-          <img id="frame4" src="Eevee/Eevee-5.png" crossorigin="anonymous" />
-          <img id="frame5" src="Eevee/Eevee-6.png" crossorigin="anonymous" />
-          <img id="frame6" src="Eevee/Eevee-7.png" crossorigin="anonymous" />
-        </a-assets>
-
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-        <a-entity mindar-image-target="targetIndex: 0" position="0 0 0">
-        <a-image
-          id="anim-image"
-         src="#frame0"
-         position="0 0.4 0"
-         width="1"
-        height="1.3"
-         transparent="true"
-      ></a-image>
-</a-entity>
-
-      </a-scene>
-    </div>
-
-    <script>
-      // Animación por secuencia de PNGs
-      document.addEventListener("DOMContentLoaded", () => {
-        const NUM_FRAMES = 7; // Número total de frames
-        const FRAME_RATE = 10; // Frames por segundo
-        const FRAME_DURATION = 1000 / FRAME_RATE; // Duración de cada frame en ms
-
-        const animImage = document.querySelector("#anim-image");
-        let currentFrame = 0;
-        let animInterval;
-
-        const scene = document.querySelector("a-scene");
-
-        scene.addEventListener("targetFound", () => {
-          if (!animInterval) {
-            animInterval = setInterval(() => {
-              currentFrame = (currentFrame + 1) % NUM_FRAMES;
-              console.log("Frame actual:", currentFrame);
-              
-        // Actualizar textura con material para forzar refresco
-              animImage.setAttribute("material", "src", `#frame${currentFrame}`);
-            }, FRAME_DURATION);
-          }
-        });
-
-        scene.addEventListener("targetLost", () => {
-          clearInterval(animInterval);
-          animInterval = null;
-          currentFrame = 0;
-          animImage.setAttribute("material", "src", "#frame0");
-        });
-      });
-    </script>
-  </body>
+</body>
 </html>
