--- a/Eevee_Llavero/eevee.html
+++ b/Eevee_Llavero/eevee.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Secuencia PNG Animada</title>
+    <title>Animación Eevee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- MindAR y A-Frame -->
@@ -48,7 +48,7 @@
         <a-image
           id="anim-image"
          src="#frame0"
-         position="0 0.4 0"
+         position="0 0.2 0"
          width="1"
         height="1.3"
          transparent="true"
