--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="eevee.html">Eevee</a></li>
+							<li><a href="Eevee_Llavero/eevee.html">Eevee</a></li>
 							<li><a href="generic.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
@@ -59,7 +59,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="eevee.html">
+									<a href="Eevee_Llavero/eevee.html">
 										<h2>Eevee</h2>
 										<div class="content">
 											<p>eevee animation.</p>
