--- a/Eevee_Llavero/eevee.html
+++ b/Eevee_Llavero/eevee.html
@@ -1,158 +1,156 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Animación Eevee</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Animación Eevee</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Estilos del tema Phantom -->
-    <link rel="stylesheet" href="../../assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
+  <!-- Estilos Phantom -->
+  <link rel="stylesheet" href="../../assets/css/main.css" />
+  <noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 
-    <!-- MindAR y A-Frame -->
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
+  <!-- MindAR + A‑Frame -->
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
+  <style>
+    /* ────────────────  layout básico  ──────────────── */
+    body { margin: 0; overflow: hidden; }
 
-      #ar-container {
-        width: 100vw;
-        height: 100vh;
-        position: relative;
-        z-index: 1;
-      }
+    /* Ancho del menú fijo (ajusta si lo necesitas) */
+    :root { --menu-width: 230px; }
 
-      /* Asegura que el menú y demás contenido estén sobre el AR si se desea */
-      #main, #header, #menu, #footer {
-        z-index: 10;
-        position: relative;
-      }
-    </style>
-  </head>
-  <body class="is-preload">
-    <div id="wrapper">
-      <!-- Header -->
-      <header id="header">
-        <div class="inner">
-          <a href="../../index.html" class="logo">
-            <span class="symbol"><img src="../../images/logo.svg" alt="" /></span>
-            <span class="title">Phantom</span>
-          </a>
-          <nav>
-            <ul>
-              <li><a href="#menu">Menu</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
+    /* Menú siempre visible pegado a la derecha */
+    #menu {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: var(--menu-width);
+      height: 100vh;
+      padding: 2rem 1.5rem;
+      background: rgba(255,255,255,0.95);
+      box-shadow: -2px 0 6px rgba(0,0,0,0.25);
+      z-index: 1000;        /* siempre por encima del AR */
+    }
+    #menu h2 { margin-top: 0; }
 
-      <!-- Menu lateral -->
-      <nav id="menu">
-        <h2>Menu</h2>
-        <ul>
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../Eevee_Llavero/">Eevee</a></li>
-          <li><a href="../../generic.html">Tempus etiam</a></li>
-          <li><a href="../../generic.html">Consequat dolor</a></li>
-          <li><a href="../../elements.html">Elements</a></li>
-        </ul>
-      </nav>
+    /* Empuja el resto del wrapper para que no quede debajo del menú */
+    #wrapper { margin-right: var(--menu-width); }
 
-      <!-- Contenido principal -->
-      <div id="main">
-        <div class="inner">
-          <h1>Animación Eevee</h1>
-          <p>Apunta tu cámara al marcador para ver la animación de Eevee.</p>
-        </div>
-      </div>
+    /* contenedor AR ocupa toda la ventana menos el margen del menú */
+    #ar-container {
+      width: calc(100vw - var(--menu-width));
+      height: 100vh;
+    }
+  </style>
+</head>
 
-      <!-- AR Viewer -->
-      <div id="ar-container">
-        <a-scene
-          mindar-image="imageTargetSrc: targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;"
-          color-space="sRGB"
-          embedded
-          renderer="colorManagement: true, physicallyCorrectLights"
-          vr-mode-ui="enabled: false"
-          device-orientation-permission-ui="enabled: true"
-        >
-          <a-assets>
-            <img id="frame0" src="Eevee/Eevee-1.png" crossorigin="anonymous" />
-            <img id="frame1" src="Eevee/Eevee-2.png" crossorigin="anonymous" />
-            <img id="frame2" src="Eevee/Eevee-3.png" crossorigin="anonymous" />
-            <img id="frame3" src="Eevee/Eevee-4.png" crossorigin="anonymous" />
-            <img id="frame4" src="Eevee/Eevee-5.png" crossorigin="anonymous" />
-            <img id="frame5" src="Eevee/Eevee-6.png" crossorigin="anonymous" />
-            <img id="frame6" src="Eevee/Eevee-7.png" crossorigin="anonymous" />
-          </a-assets>
+<body class="is-preload">
+<div id="wrapper">
 
-          <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-          <a-entity mindar-image-target="targetIndex: 0" position="0 0 0">
-            <a-image
-              id="anim-image"
-              src="#frame0"
-              position="0 0.2 0"
-              width="1"
-              height="1.3"
-              transparent="true"
-            ></a-image>
-          </a-entity>
-        </a-scene>
-      </div>
-
-      <!-- Footer opcional -->
-      <footer id="footer">
-        <div class="inner">
-          <ul class="copyright">
-            <li>&copy; Eevee AR. All rights reserved.</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-          </ul>
-        </div>
-      </footer>
+  <!-- Header (logo + enlace Home) -->
+  <header id="header">
+    <div class="inner">
+      <a href="../../index.html" class="logo">
+        <span class="symbol"><img src="../../images/logo.svg" alt=""></span>
+        <span class="title">Phantom</span>
+      </a>
     </div>
+  </header>
 
-    <!-- Scripts del tema -->
-    <script src="../../assets/js/jquery.min.js"></script>
-    <script src="../../assets/js/browser.min.js"></script>
-    <script src="../../assets/js/breakpoints.min.js"></script>
-    <script src="../../assets/js/util.js"></script>
-    <script src="../../assets/js/main.js"></script>
+  <!-- Menú lateral fijo -->
+  <nav id="menu">
+    <h2>Menú</h2>
+    <ul>
+      <li><a href="../../index.html">Home</a></li>
+      <li><a href="../Eevee_Llavero/">Eevee</a></li>
+      <!-- añade más enlaces si quieres -->
+      <li><a href="../../generic.html">Tempus etiam</a></li>
+      <li><a href="../../generic.html">Consequat dolor</a></li>
+      <li><a href="../../elements.html">Elements</a></li>
+    </ul>
+  </nav>
 
-    <!-- Script de animación -->
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const NUM_FRAMES = 7;
-        const FRAME_RATE = 10;
-        const FRAME_DURATION = 1000 / FRAME_RATE;
+  <!-- Texto o cabecera de la página -->
+  <div id="main">
+    <div class="inner">
+      <h1>Animación Eevee</h1>
+      <p>Apunta tu cámara al marcador para ver la animación de Eevee.</p>
+    </div>
+  </div>
 
-        const animImage = document.querySelector("#anim-image");
-        let currentFrame = 0;
-        let animInterval;
+  <!-- Escena AR -->
+  <div id="ar-container">
+    <a-scene
+      mindar-image="imageTargetSrc: targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;"
+      color-space="sRGB"
+      embedded
+      renderer="colorManagement: true, physicallyCorrectLights"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: true">
 
-        const scene = document.querySelector("a-scene");
+      <a-assets>
+        <img id="frame0" src="Eevee/Eevee-1.png" crossorigin="anonymous" />
+        <img id="frame1" src="Eevee/Eevee-2.png" crossorigin="anonymous" />
+        <img id="frame2" src="Eevee/Eevee-3.png" crossorigin="anonymous" />
+        <img id="frame3" src="Eevee/Eevee-4.png" crossorigin="anonymous" />
+        <img id="frame4" src="Eevee/Eevee-5.png" crossorigin="anonymous" />
+        <img id="frame5" src="Eevee/Eevee-6.png" crossorigin="anonymous" />
+        <img id="frame6" src="Eevee/Eevee-7.png" crossorigin="anonymous" />
+      </a-assets>
 
-        scene.addEventListener("targetFound", () => {
-          if (!animInterval) {
-            animInterval = setInterval(() => {
-              currentFrame = (currentFrame + 1) % NUM_FRAMES;
-              animImage.setAttribute("material", "src", `#frame${currentFrame}`);
-            }, FRAME_DURATION);
-          }
-        });
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        scene.addEventListener("targetLost", () => {
-          clearInterval(animInterval);
-          animInterval = null;
-          currentFrame = 0;
-          animImage.setAttribute("material", "src", "#frame0");
-        });
-      });
-    </script>
-  </body>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-image id="anim-image"
+                 src="#frame0"
+                 position="0 0.2 0"
+                 width="1"
+                 height="1.3"
+                 transparent="true"></a-image>
+      </a-entity>
+    </a-scene>
+  </div>
+
+  <!-- Footer opcional -->
+  <footer id="footer">
+    <div class="inner">
+      <ul class="copyright">
+        <li>&copy; Eevee AR.</li>
+        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+      </ul>
+    </div>
+  </footer>
+
+</div><!-- /#wrapper -->
+
+<!-- Scripts del tema -->
+<script src="../../assets/js/jquery.min.js"></script>
+<script src="../../assets/js/browser.min.js"></script>
+<script src="../../assets/js/breakpoints.min.js"></script>
+<script src="../../assets/js/util.js"></script>
+<script src="../../assets/js/main.js"></script>
+
+<!-- Animación de fotogramas -->
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const FRAMES = 7, FPS = 10, DUR = 1000 / FPS;
+    const img = document.querySelector('#anim-image');
+    let i = 0, loop;
+
+    const scene = document.querySelector('a-scene');
+    scene.addEventListener('targetFound', () => {
+      if (!loop) loop = setInterval(() => {
+        i = (i + 1) % FRAMES;
+        img.setAttribute('material', 'src', `#frame${i}`);
+      }, DUR);
+    });
+    scene.addEventListener('targetLost', () => {
+      clearInterval(loop); loop = null; i = 0;
+      img.setAttribute('material', 'src', '#frame0');
+    });
+  });
+</script>
+</body>
 </html>
