--- a/eevee.html
+++ b/eevee.html
@@ -58,19 +58,17 @@
       </a>
     </div>
   </header>
-
-  <!-- Menú lateral fijo -->
-  <nav id="menu">
-    <h2>Menú</h2>
-    <ul>
-      <li><a href="../../index.html">Home</a></li>
-      <li><a href="../Eevee_Llavero/">Eevee</a></li>
-      <!-- añade más enlaces si quieres -->
-      <li><a href="../../generic.html">Tempus etiam</a></li>
-      <li><a href="../../generic.html">Consequat dolor</a></li>
-      <li><a href="../../elements.html">Elements</a></li>
-    </ul>
-  </nav>
+	<!-- Menu -->
+					<nav id="menu">
+						<h2>Menu</h2>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="eevee.html">Ipsum veroeros</a></li>
+							<li><a href="generic.html">Tempus etiam</a></li>
+							<li><a href="generic.html">Consequat dolor</a></li>
+							<li><a href="elements.html">Elements</a></li>
+						</ul>
+					</nav>
 
   <!-- Texto o cabecera de la página -->
   <div id="main">
