--- a/eevee.html
+++ b/eevee.html
@@ -19,7 +19,7 @@
     <div id="ar-container">
       <a-scene 
         mindar-image="
-          imageTargetSrc: targets.mind;
+          imageTargetSrc:Eevee/targets.mind;
           filterMinCF: 0.05;
           filterBeta: 5;
           warmupTolerance: 1;
