--- a/eevee.html
+++ b/eevee.html
@@ -17,7 +17,7 @@
   <body>
     <div id="ar-container">
       <a-scene 
-        mindar-image="imageTargetSrc: Eevee/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1"
+        mindar-image="imageTargetSrc:Targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1"
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
