--- a/eevee.html
+++ b/eevee.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Secuencia PNG Animada</title>
+    <title>INK BITS - Animación MindAR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- A-Frame y luego MindAR -->
+    <!-- A-Frame y MindAR -->
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 
@@ -16,8 +16,8 @@
   </head>
   <body>
     <div id="ar-container">
-      <a-scene 
-        mindar-image="imageTargetSrc:Targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1"
+      <a-scene
+        mindar-image="imageTargetSrc: ./targets.mind"
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
@@ -25,7 +25,6 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <!-- Cargamos las imágenes PNG de la secuencia -->
           <img id="frame0" src="Eevee/Eevee-1.png" crossorigin="anonymous" />
           <img id="frame1" src="Eevee/Eevee-2.png" crossorigin="anonymous" />
           <img id="frame2" src="Eevee/Eevee-3.png" crossorigin="anonymous" />
@@ -44,13 +43,14 @@
             position="0 0 0"
             width="1"
             height="1.3"
+            transparent="true"
           ></a-image>
         </a-entity>
       </a-scene>
     </div>
 
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
+      window.addEventListener("load", () => {
         const NUM_FRAMES = 7;
         const FRAME_RATE = 10;
         const FRAME_DURATION = 1000 / FRAME_RATE;
@@ -59,9 +59,9 @@
         let currentFrame = 0;
         let animInterval = null;
 
-        const scene = document.querySelector("a-scene");
+        const sceneEl = document.querySelector("a-scene");
 
-        scene.addEventListener("targetFound", () => {
+        sceneEl.addEventListener("targetFound", () => {
           if (!animInterval) {
             animInterval = setInterval(() => {
               currentFrame = (currentFrame + 1) % NUM_FRAMES;
@@ -70,7 +70,7 @@
           }
         });
 
-        scene.addEventListener("targetLost", () => {
+        sceneEl.addEventListener("targetLost", () => {
           if (animInterval) {
             clearInterval(animInterval);
             animInterval = null;
