--- a/eevee.html
+++ b/eevee.html
@@ -17,7 +17,7 @@
   <body>
     <div id="ar-container">
       <a-scene
-        mindar-image="imageTargetSrc: ./targets.mind"
+        mindar-image="imageTargetSrc:targets.mind"
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
