--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li>
+								<li>&copy; INK BITS. All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
