--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Llaveros.html">
+									<a href="eevee.html">
 										<h2>Keychains</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
